@@ -1,3 +1,7 @@
+2010-10-13 Ingo Renner  <ingo@typo3.org>
+
+	* Uncommented a test for aiff file meta data extractions, marked as incomplete though, currently not working...
+
 2010-09-27 Ingo Renner  <ingo@typo3.org>
 
 	* Disabled the configuration report for now, it's not fully implemented yet
